--- a/api/package.json
+++ b/api/package.json
@@ -21,9 +21,9 @@
   "dependencies": {
     "@clerk/clerk-sdk-node": "^4.10.1",
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.3.2",
     "@nestjs/core": "^9.0.5",
     "@nestjs/platform-express": "^9.0.0",
-    "dotenv": "^16.0.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.5"
   },
